syntax = "proto3";

package analytics;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "signal.proto";

option go_package = "github.com/julian776/baby-guardian/proto";

service Analytics {
  rpc LastDangerousSignal(
    LastDangerousSignalRequest
  ) returns (LastDangerousSignalResponse) {
    option (google.api.http) = {
      post: "/analytics/signals/dangerous",
      body: "*"
    };
  }

  rpc LastDangerousSignalStream(
    LastDangerousSignalStreamRequest
  ) returns (stream LastDangerousSignalResponse) {
    option (google.api.http) = {
      post: "/analytics/signals/dangerous/stream",
      body: "*"
    };
  }
}

message LastDangerousSignalRequest {
}

message LastDangerousSignalResponse {
  signal.Signal signal = 1;
}

message LastDangerousSignalStreamRequest {
  google.protobuf.Duration interval = 1;
}